--- a/sites/all/themes/grupoanave/less/content/micrositio.less
+++ b/sites/all/themes/grupoanave/less/content/micrositio.less
@@ -598,6 +598,7 @@
     }
   }
   #block-anavem-carrusel .layout-wrapper {
+    position: unset;
     .info h3 {
       background: none;
       color: #0d4d66;
